--- a/style.css
+++ b/style.css
@@ -4,23 +4,22 @@
     box-sizing: border-box;
 }
 :root {
+    --color-primary: #ffc500;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
 
 body{
     margin: 0;
+    padding-top: 7.75rem;
 }
 
-ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
     display: flex;
     list-style: none;
     padding-left: 0;
 }
 
-li{
-    margin-right: 0.625rem;
-}
 
 .navbar {
     position: fixed;
@@ -29,7 +28,9 @@ li{
     align-items: center;
     top: 0;
     left: 0;
+
     width: 100vw;
+    height: 7.75rem;
     padding: 0 1rem;
     background-color: #000; /*vermelho / verde / azul / transparencia / valores de 0 a F*/
     color: #fff;
@@ -39,7 +40,34 @@ li{
     justify-self: end;
 }
 
+.navbar__links li{
+    font-size: 0.875rem;
+    margin-right: 3rem;
+    text-transform: uppercase;
+}
 .navbar__links a{
+    font-weight: 300;
     color: #fff;
     text-decoration: none;
+}
+
+.navbar__links a:hover{
+    color: var(--color-primary);
+}
+
+.logo-studion {
+    font-size: 2.375rem;
+    font-weight: 900;
+    line-height: 1ch; /*relativo ao tamanho da altura do grifo zero da fonte */
+    text-transform: uppercase;
+    text-align: right;
+}
+
+.logo-studion__subtitle{
+    font-size: .875rem;
+    font-weight: 300;
+}
+
+.copy--primary{
+    color:var(--color-primary);
 }
