--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 
 * {
     box-sizing: border-box;
 }
+
 :root {
-    --color-primary: #ffc500;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    --color-primary: #ffc500;
+    --default-padding:1rem;
 }
 
 body{
@@ -23,6 +25,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 
 .navbar {
     position: fixed;
+    z-index: 1;
     display: grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
@@ -70,4 +73,38 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 
 .copy--primary{
     color:var(--color-primary);
+}
+
+/*#slider {
+    height: calc(100vh - 7.75rem);
+    padding: var(--default-padding);
+    background-color: #000;
+    background-image: url('./src/images/banner.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;  
+}*/
+
+#slider {
+    background-color: #000;
+    color: #fff; 
+}
+
+.slide{
+    position: relative;
+    height: calc(100vh - 7.75rem);
+}
+
+.slide__background_image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.slide__copy{
+    position: absolute;
+    top: 0;
+    left: 50vw;
 }
