--- a/style.css
+++ b/style.css
@@ -105,6 +105,38 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 
 .slide__copy{
     position: absolute;
-    top: 0;
+    top: 6.25rem;
     left: 50vw;
 }
+
+.slide__copy h6{
+    font-size: 0.9375rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.1875rem;
+}
+
+.slide__copy h2{
+    font-size: 6.25rem;
+    font-weight: 400;
+    line-height: 6.25rem;
+    text-transform: uppercase;
+}
+
+.slide__copy h2 span{
+    display: block;
+}
+
+.btn{
+    /*min-height: 3.125rem;*/
+    padding: 1.25rem 2.5rem;
+    border: 0.125rem solid #fff;
+    border-radius: 5rem;
+    color: var(--color-primary);
+    background: unset;
+    font-size: 0.9375rem;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+}
+
