--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-* {
+*{
     box-sizing: border-box;
 }
 
-:root {
+:root{
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     --color-primary: #ffc500;
+    --color-copy: #333;
     --default-padding:1rem;
+    color: var(--color-copy);
 }
 
 body{
     margin: 0;
     padding-top: 7.75rem;
+}
+
+header, main, footer{
+    overflow-x: hidden;
+}
+
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
 }
 
 ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
@@ -23,20 +35,24 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 }
 
 
-.navbar {
+.navbar{
     position: fixed;
     z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000; /*vermelho / verde / azul / transparencia / valores de 0 a F*/
+    color: #fff;
+}
+
+.navbar__container{
     display: grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
-    top: 0;
-    left: 0;
-
     width: 100vw;
     height: 7.75rem;
     padding: 0 1rem;
-    background-color: #000; /*vermelho / verde / azul / transparencia / valores de 0 a F*/
-    color: #fff;
+    
 }
 
 .navbar__links{
@@ -58,7 +74,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     color: var(--color-primary);
 }
 
-.logo-studion {
+.logo-studion{
     font-size: 2.375rem;
     font-weight: 900;
     line-height: 1ch; /*relativo ao tamanho da altura do grifo zero da fonte */
@@ -86,7 +102,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     color: #fff;  
 }*/
 
-#slider {
+#slider{
     background-color: #000;
     color: #fff; 
 }
@@ -129,14 +145,89 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 
 .btn{
     /*min-height: 3.125rem;*/
-    padding: 1.25rem 2.5rem;
+    cursor: pointer;
+    padding: 1rem 2.5rem;
     border: 0.125rem solid #fff;
     border-radius: 5rem;
     color: var(--color-primary);
     background: unset;
     font-size: 0.9375rem;
     font-weight: 700;
-    text-align: center;
+    text-transform: uppercase;
+    transition: 0.3s all ease;
+}
+
+.btn:hover, 
+.btn:active, 
+.btn:focus, 
+.btn--instututional{
+    border-color: var(--color-primary);
+    background-color: var(--color-primary);
+    color: #fff;
+}
+
+#counter{
+    background-color: var(--color-primary);
+    color: #fff;
     text-transform: uppercase;
 }
 
+.counter__container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    place-items: center;
+    padding: 4.375rem 1rem;
+}
+
+.counter__container h3{
+    font-size: 2.1875rem;
+}
+
+.counter__container h3 small{
+    display: block;
+    font-size: 1.25rem;
+    /*margin-top: 0.5rem;*/
+}
+
+.institutional{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 3.75rem;
+    align-items: center;
+    padding: 4.375rem;
+}
+
+.institutional__image{
+    max-width: 550px;
+}
+
+.institutional__copy{
+    padding: 0 1.875rem;
+}
+
+.institutional__copy h6{
+    font-size: 0.875rem;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.institutional__copy h4{
+    font: 1.5625rem;
+    margin-top: 1rem;
+} 
+
+.institutional__copy p{
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.0625rem;
+    line-height: 1.6875rem;
+    margin-bottom: 0;
+    margin-bottom: 2.5rem;
+}
+
+.btn__instututional:hover{
+    color: var(--color-copy);
+    border-color: var(--color-copy);
+    background: unset;
+}
