--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
+
 
 *{
     box-sizing: border-box;
@@ -28,7 +31,7 @@ header, main, footer{
     margin: 0 auto;
 }
 
-ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
+ul{
     display: flex;
     list-style: none;
     padding-left: 0;
@@ -49,10 +52,10 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     display: grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
+
     width: 100vw;
     height: 7.75rem;
     padding: 0 1rem;
-    
 }
 
 .navbar__links{
@@ -109,7 +112,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 
 .slide{
     position: relative;
-    height: calc(100vh - 7.75rem);
+    height: calc(90vh - 7.75rem);
 }
 
 .slide__background_image{
@@ -136,7 +139,6 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     font-size: 6.25rem;
     font-weight: 400;
     line-height: 6.25rem;
-    text-transform: uppercase;
 }
 
 .slide__copy h2 span{
@@ -160,7 +162,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 .btn:hover, 
 .btn:active, 
 .btn:focus, 
-.btn--instututional{
+.btn--institutional{
     border-color: var(--color-primary);
     background-color: var(--color-primary);
     color: #fff;
@@ -176,7 +178,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     place-items: center;
-    padding: 4.375rem 1rem;
+    padding: 4.375rem 0;
 }
 
 .counter__container h3{
@@ -192,7 +194,7 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
 .institutional{
     display: grid;
     grid-template-columns: auto auto;
-    gap: 3.75rem;
+    gap: 3.125rem;
     align-items: center;
     padding: 4.375rem;
 }
@@ -226,7 +228,55 @@ ul{@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400
     margin-bottom: 2.5rem;
 }
 
-.btn__instututional:hover{
+.btn--institutional:hover{
+    color: var(--color-copy);
+    border-color: var(--color-copy);
+    background: unset;
+}
+
+.quote{
+    background-image: url(./src/images/parallax.jpg);  
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.quote .container{
+    display: grid;
+    align-items: center;
+    justify-items: end;
+    min-height: 80vh;
+}
+
+.quote__copy{
+    background-color: #fff;
+    padding: 5.625rem 4.375rem;
+}
+
+.quote__copy h6{
+    font-size: 0.9375rem;
+    font-weight: 400;
+    letter-spacing: 0.1875rem;
+    line-height: 1.4375rem;
+    max-width: 53ch;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.quote__copy h2{
+    font-size: 5rem;
+    line-height: 5rem;
+    text-transform: uppercase;
+    letter-spacing: -0.1875rem;
+    margin: 1.875rem 0;
+}
+
+.quote__copy h2 span{
+    display: block;
+}
+
+.btn--quote{
     color: var(--color-copy);
     border-color: var(--color-copy);
     background: unset;
