--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul{
 
 .slide__background_image{
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: cover;
     object-position: center;
 }
@@ -280,4 +280,116 @@ ul{
     color: var(--color-copy);
     border-color: var(--color-copy);
     background: unset;
+}
+
+.footer{
+    background-color: #000;
+    color: #fff;
+    padding: 0 1rem;
+}
+
+.footer__container{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    align-items: center;
+    padding: 5.25rem 0 3.75rem 0; /*valores: cima direita baixo esquerda*/
+}
+
+.footer .logo-studion{
+    justify-self: start;
+    margin: 0;
+}
+
+.logo-studion__subtitle{
+    display: block;
+}
+
+.footer__form{
+    display: grid;
+    place-items: center;
+    grid-template-columns: 9ch auto;
+
+    
+    gap: 1.25rem;
+}
+
+.footer__form label{
+    font-size: 0.875rem;
+    font-weight: 300;
+    line-height: 1rem;
+    text-align: center;
+}
+
+.footer__form fieldset{
+    position: relative;
+    border: unset;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.footer__form input{
+    width: 100%;
+    background-color: var(--color-primary);
+    border: unset;
+    height: 2.875rem;
+    padding: 1rem;
+    font-size: 0.875rem;
+    font-weight: 700;
+    color: #000;
+    text-transform: lowercase;
+}
+
+.footer__form input::placeholder{
+    text-transform: uppercase;
+    color: #000;
+}
+
+.footer__form input:focus{
+    outline: unset;
+}
+
+.footer__form  button{
+    position: absolute;
+    cursor: pointer;
+    right: 0;
+    top: 0;
+    border: unset;
+    height: 2.875rem;
+    transition: 0.5s all ease;
+}
+
+.footer__form  button:hover{
+   color: #fff;
+   background-color: var(--color-copy)
+}
+
+
+.footer__social{
+    justify-self: end;
+}
+
+.footer__social a,
+.footer__social a :visited,
+.footer__social a :active{
+    color: #fff;
+    margin-left: 0.25rem;
+}
+
+.footer__social a .fa-twitter,
+.footer__social a :visited .fa-twitter,
+.footer__social a :active .fa-twitter{
+    color: #000;
+}
+
+.footer hr{
+    border-color: #fff4;
+    margin: 0;
+}
+
+.footer p{
+    text-align: center;
+    font-size: 0.875rem;
+    font-weight: 300;
+    margin: 1.5rem 0;
 }
