--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,13 @@
 
 @import "./scc/_variables.css";
 @import "./scc/_base.css";
-@import "./scc/_btn.css";
 @import "./scc/_utils.css";
+@import "./scc/_btn.css";
 @import "./scc/_navbar.css"; 
+@import "./scc/_footer_css";
+
+
 @import "./scc/_home.css";
-@import "./scc/_footer_css"
-
-
 @import "./scc/_contacts.css";
 
 
