--- a/src/css/_home.css
+++ b/src/css/_home.css
@@ -110,11 +110,13 @@
 }
 
 .quote{
-    background-image: url(./src/images/parallax.jpg);
+    background-image: url("src/images/parallax.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    
+   
 }
 
 .quote .container{
