--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -10,11 +10,11 @@
 
 body{
     margin: 0;
-    padding-top: 7.75rem;
 }
 
 header, main, footer{
-    overflow-x: hidden;
+    margin: 0;
+    
 }
 
 ul{
