--- a/src/css/_btn.css
+++ b/src/css/_btn.css
@@ -15,16 +15,22 @@
 .btn:hover,
 .btn:active,
 .btn:focus,
-.btn--institutional {
+.btn--institutional,
+.btn--contact{
     border-color: var(--color-primary);
     background-color: var(--color-primary);
     color: #fff;
 }
 
-.btn--institutional:hover {
+.btn--institutional:hover,
+.btn--contact:hover{
     color: var(--color-copy);
     border-color: var(--color-copy);
     background: unset;
+}
+
+.btn--contact:hover {
+    color: var(--color-primary);
 }
 
 .btn--quote {
