--- a/src/css/_home.css
+++ b/src/css/_home.css
@@ -16,7 +16,7 @@
 
 .slide {
     position: relative;
-    height: calc(90vh - 7.75rem);
+    height: 90vh;
 }
 
 .slide__background_image {
@@ -110,7 +110,7 @@
 }
 
 .quote{
-    background-image: url("src/images/parallax.jpg");
+    background-image: url("../images/parallax.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
