--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:whtg@400;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
 
@@ -7,7 +7,9 @@
 @import "./css/_base.css";
 @import "./css/_utils.css";
 @import "./css/_btn.css";
+
 @import "./css/_navbar.css"; 
+@import "./css/_hero.css";
 @import "./css/_footer.css";
 
 
